--- a/web/styles/doran.css
+++ b/web/styles/doran.css
@@ -1,11 +1,6 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
-    Created on : Sep 14, 2015, 4:36:13 PM
-    Author     : Patrick
+Copyright (c) 2015 Peter S. Wages & Patrick Doran
+Campus Box 7566, Elon University, Elon, NC 27244
 */
 *{
     font-family: 'Lato', sans-serif;   
